LinuxとMac用の起動方法を追加